Library Management: update Implement Google books api integration
* changed the google books api service to use newer http requester api